tried to change modularity handling